--- a/order.html
+++ b/order.html
@@ -50,7 +50,7 @@
 
             <form action="#" class="order">
                 <fieldset>
-                    <legend>Selected Food</legend>
+                    <legend class="text-white">Selected Food</legend>
 
                     <div class="food-menu-img">
                         <img src="images/menu-pizza.jpg" alt="Chicke Hawain Pizza" class="img-responsive img-curve">
@@ -68,15 +68,15 @@
                 </fieldset>
                 
                 <fieldset>
-                    <legend>Delivery Details</legend>
+                    <legend class="text-white">Delivery Details</legend>
                     <div class="order-label">Full Name</div>
-                    <input type="text" name="full-name" placeholder="E.g. Vijay Thapa" class="input-responsive" required>
+                    <input type="text" name="full-name" placeholder="E.g. Nurmukhamed" class="input-responsive" required>
 
                     <div class="order-label">Phone Number</div>
-                    <input type="tel" name="contact" placeholder="E.g. 9843xxxxxx" class="input-responsive" required>
+                    <input type="tel" name="contact" placeholder="E.g. 8702XXXXXXX" class="input-responsive" required>
 
                     <div class="order-label">Email</div>
-                    <input type="email" name="email" placeholder="E.g. hi@vijaythapa.com" class="input-responsive" required>
+                    <input type="email" name="email" placeholder="E.g. example@gmail.com" class="input-responsive" required>
 
                     <div class="order-label">Address</div>
                     <textarea name="address" rows="10" placeholder="E.g. Street, City, Country" class="input-responsive" required></textarea>
